--- a/assets/styles/components/_team.scss
+++ b/assets/styles/components/_team.scss
@@ -6,7 +6,7 @@
 }
 
 .team .member .pic {
-  overflow: hidden;
+  overflow: clip;
 }
 
 .team .member img {
