--- a/assets/styles/layout/_section.scss
+++ b/assets/styles/layout/_section.scss
@@ -1,6 +1,6 @@
 section {
   padding-block: 3.75rem;
-  overflow: hidden;
+  overflow: clip;
 }
 
 .section-title {
